syntax = "proto3";

package app;

package quiz;

service QuizService {
  rpc SubmitAnswer (AnswerRequest) returns (AnswerResponse);
  rpc GetQuestion (QuestionRequest) returns (QuestionResponse);
}

message AnswerRequest {
  string playerId = 1;
  string answer = 2;
}

message AnswerResponse {
  bool success = 1;
}

message QuestionRequest {
  string playerId = 1;
}

message QuestionResponse {
  string question = 1;
  repeated string options = 2;
}
